[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/CoolDropsIconFinal.png" type="Texture" id=1]
[ext_resource path="res://stage.gd" type="Script" id=2]
[ext_resource path="res://Poppins/Poppins-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Poppins/Poppins-Light.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 38
font_data = ExtResource( 5 )

[sub_resource type="GDScript" id=3]

[sub_resource type="DynamicFont" id=1]
size = 502
font_data = ExtResource( 3 )

[node name="stage" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 2048.0 ],
"_edit_vertical_guides_": [ 2732.0, 1356.0 ]
}

[node name="tile_center" type="Sprite" parent="."]
position = Vector2( 1356, 704 )
scale = Vector2( 1.82812, 1.82812 )
texture = ExtResource( 1 )

[node name="tile_corner" type="Sprite" parent="."]
position = Vector2( 2704, 2020 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="window_size" type="Label" parent="."]
margin_left = 5.0
margin_right = 437.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 2 )
text = "Display Resolution"
script = SubResource( 3 )

[node name="dropper_res_label" type="Label" parent="."]
margin_left = 5.0
margin_top = 47.0
margin_right = 437.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 2 )
text = "Dropper Resolution:"

[node name="Dropper Array" type="Label" parent="."]
margin_left = 5.0
margin_top = 110.0
margin_right = 2203.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 2 )
text = "Dropper Array: a 1-dimensional array, like a list of numbers for the sinusoidal distribution of x-positions for the dropper"

[node name="dropper_res" type="Label" parent="."]
margin_left = 397.0
margin_top = 47.0
margin_right = 829.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 2 )
text = "xx points"

[node name="iPad Pro Resolution" type="Label" parent="."]
margin_left = 2605.0
margin_top = 2035.0
margin_right = 2676.0
margin_bottom = 2049.0
text = "2732x2048"

[node name="status header" type="Label" parent="."]
margin_left = 1182.0
margin_top = -5.99999
margin_right = 4711.0
margin_bottom = 698.0
rect_scale = Vector2( 0.0985196, 0.0985196 )
custom_fonts/font = SubResource( 1 )
text = "status header"
align = 1

[node name="dropper" type="Label" parent="."]
margin_left = 1182.0
margin_top = 180.0
margin_right = 4711.0
margin_bottom = 884.0
rect_scale = Vector2( 0.0985196, 0.0985196 )
custom_fonts/font = SubResource( 1 )
text = "dropper"
align = 1

[node name="tile" type="Label" parent="."]
margin_left = 1182.0
margin_top = 1173.0
margin_right = 4711.0
margin_bottom = 1877.0
rect_scale = Vector2( 0.0985196, 0.0985196 )
custom_fonts/font = SubResource( 1 )
text = "tile"
align = 1

[node name="grid" type="Label" parent="."]
margin_left = 1182.0
margin_top = 1977.0
margin_right = 4711.0
margin_bottom = 2681.0
rect_scale = Vector2( 0.0985196, 0.0985196 )
custom_fonts/font = SubResource( 1 )
text = "grid"
align = 1

[node name="Polygon2D" type="Polygon2D" parent="."]
